--- a/Lesson 2/2d.html
+++ b/Lesson 2/2d.html
@@ -17,6 +17,7 @@
       width: 105px;
       font-weight: bold;
       border-radius: 4px;
+      cursor: pointer;
     }
 
     .download {
@@ -31,6 +32,7 @@
       width: 105px;
       font-weight: bold;
       border-radius: 4px;
+      cursor: pointer;
     }
   </style>
 </head>
