added transition effect

--- a/Lesson 3/3a.html
+++ b/Lesson 3/3a.html
@@ -12,6 +12,7 @@
       height: 35px;
       width: 120px;
       cursor: pointer;
+      transition: opacity 0.15s;
     }
     .uber-btn:hover {
       opacity: 0.8;
