added hover effect on both buttons with transition

--- a/Lesson 3/3f.html
+++ b/Lesson 3/3f.html
@@ -27,6 +27,9 @@
       cursor: pointer;
       transition: opacity 0.15s;
     }
+    .cart-btn:hover {
+      background-color: #F6C202;
+    }
     .cart-btn:active {
       opacity: 0.5;
     }
@@ -41,9 +44,13 @@
       cursor: pointer;
       transition: opacity 0.15s;
     }
+    .buy-btn:hover {
+      background-color: rgb(255, 144, 16);
+    }
     .buy-btn:active{
       opacity: 0.5;
     }
+
   </style>
 
 </head>
