added transition and hover effect on buttons

--- a/Lesson 3/3f.html
+++ b/Lesson 3/3f.html
@@ -25,7 +25,7 @@
       border-radius: 14px;
       margin: 4px;
       cursor: pointer;
-      transition: opacity 0.15s;
+      transition: opacity 0.15s, background-color 0.15s;
     }
     .cart-btn:hover {
       background-color: #F6C202;
@@ -42,7 +42,7 @@
       border-radius: 14px;
       margin-left: 4px;
       cursor: pointer;
-      transition: opacity 0.15s;
+      transition: opacity 0.15s, background-color 0.15s;
     }
     .buy-btn:hover {
       background-color: rgb(255, 144, 16);
