--- a/Lesson 6/website.html
+++ b/Lesson 6/website.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chrome Devtools & CSS Box Model</title>
-    <link rel="stylesheet" href="./styles/buttons.css" />
+    <link rel="stylesheet" href="buttons.css" />
   </head>
   <body>
     <!-- Subscribe Button -->
