seperate styles from html and link to external css

--- a/Lesson 2/2a.html
+++ b/Lesson 2/2a.html
@@ -5,15 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Uber Button</title>
-  <style>
-    .uber-btn {
-      color:white;
-      background-color: black;
-      height: 35px;
-      width: 120px;
-      cursor: pointer;
-    }
-  </style>
+  <link rel="stylesheet" href="2a.css">
 </head>
 <body>
   <!-- Making a request now button for uber bg color black with white text inside -->
