--- a/Lesson 2/2b.html
+++ b/Lesson 2/2b.html
@@ -5,18 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Amazon Add to Cart Button</title>
-  <!-- Internal CSS -->
-  <style>
-    button{
-      background-color: rgb(255, 216, 20);
-      color: black;
-      border: none;
-      height: 26px;
-      width: 150px;
-      border-radius: 13px;
-      cursor: pointer;
-    }
-  </style>
+  <!-- External CSS Link -->
+  <link rel="stylesheet" href="2b.css">
   
 </head>
 <body>
