--- a/Lesson 2/2c.html
+++ b/Lesson 2/2c.html
@@ -5,19 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Github Sign up Buttton</title>
-  <!-- Internal CSS -->
-  <style>
-    button {
-      background-color: rgb(46, 164, 79);
-      color: white;
-      border: none;
-      height: 32px;
-      width: 90px;
-      border-radius: 4px;
-      font-weight: bold;
-      cursor: pointer;
-    }
-  </style>
+  <!-- External CSS Link -->
+  <link rel="stylesheet" href="2c.css">
 </head>
 <body>
   <!-- Created a Github Sign up button  -->
