--- a/Lesson 2/2d.html
+++ b/Lesson 2/2d.html
@@ -5,36 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bootstrap button</title>
-  <!-- Internal CSS -->
-  <style>
-    .getstarted {
-      margin-top: 4px;
-      margin-left: 4px;
-      background-color: rgb(121, 82, 179);
-      color: white;
-      border: none;
-      height: 32px;
-      width: 105px;
-      font-weight: bold;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-
-    .download {
-      margin-top: 4px;
-      margin-left: 4px;
-      background-color:white;
-      color: rgb(108, 117, 125);
-      border: solid;
-      border-width: 1px;
-      border-color: rgb(108, 117, 125);
-      height: 34px;
-      width: 105px;
-      font-weight: bold;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-  </style>
+  <!-- External CSS Link -->
+  <link rel="stylesheet" href="2d.css">
 </head>
 
 <body>
