--- a/Lesson 2/2e.html
+++ b/Lesson 2/2e.html
@@ -5,33 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Likedin Buttons</title>
-  <!-- Internal CSS -->
-  <style>
-    .apply-btn {
-      margin: 4px;
-      background-color: rgb(10, 102, 194);
-      border: none;
-      color: white;
-      font-weight: bold;
-      height: 34px;
-      width: 200px;
-      border-radius: 17px;
-      cursor: pointer;
-    }
-
-    .save-btn {
-      margin: 4px;
-      background-color: white;
-      color: rgb(10, 102, 194);
-      font-weight: bold;
-      border: solid;
-      border-width: 1px;
-      height: 34px;
-      width: 80px;
-      border-radius: 17px;
-      cursor: pointer;
-    }
-  </style>
+  <!-- External CSS Link -->
+  <link rel="stylesheet" href="2e.css">
 </head>
 
 <body>
