--- a/Lesson 2/2f.html
+++ b/Lesson 2/2f.html
@@ -5,41 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Challenge Exercise</title>
-  <!-- Internal CSS -->
-  <style>
-    body {
-      margin: 4px;
-    }
-    .back-link {
-      color: rgb(0, 113, 133);
-    }
-
-    .price {
-      color: rgb(11, 163, 11);
-    }
-
-    .cart-btn {
-      background-color:rgb(255, 217, 28);
-      border: none;
-      height: 28px;
-      width: 110px;
-      border-radius: 14px;
-      margin: 4px;
-      cursor: pointer;
-    }
-
-    .buy-btn {
-      background-color: rgb(255, 164, 28);
-      border: none;
-      height: 28px;
-      width: 110px;
-      border-radius: 14px;
-      margin-left: 4px;
-      cursor: pointer;
-    }
-  </style>
-
+  <!-- External CSS Link -->
+  <link rel="stylesheet" href="2f.css">
 </head>
+
 <body>
   <!-- Challenge Exercise recreate the Exercise 1g with CSS  -->
   <a href="https://www.amazon.in/" class="back-link">Back to Amazon</a>
