remove the style from html and link to stylesheet

--- a/Lesson 2/index.html
+++ b/Lesson 2/index.html
@@ -5,44 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CSS-Basics Buttons </title>
-  <!-- Internal CSS for customizing the buttons -->
-  <style>
-    .subscribe-btn {
-      background-color: rgb(200,0,0);
-      color: white;
-      border: none;
-      height: 36px;
-      width: 106px;
-      margin-right: 8px;
-      border-radius: 2px;
-      cursor: pointer;
-    }
-    .join-btn{
-      height: 36px;
-      width: 62px;
-      border-style: solid;
-      border-color: rgb(41, 118, 211);
-      border-width: 1px;
-      border-radius:2px;
-      color:rgb(41, 118, 211);
-      
-      cursor: pointer;
-    }
-
-    .tweet-btn {
-      background-color: rgb(33, 124, 200);
-      color:white;
-      border:none;
-      margin-left: 8px;
-      height: 36px;
-      width: 80px;
-      border-radius: 18px;
-      font-weight: bold;
-      cursor: pointer;
-    }
-
-  </style>
-
+  <!-- External CSS Link -->
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
   <!-- Creating a youtube subscribe buton, join button and a tweet button  --> 
