--- a/Lesson 3/3b.html
+++ b/Lesson 3/3b.html
@@ -5,20 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Amazon-Button</title>
-  <style>
-    .cart-btn {
-      background-color: #FED114;
-      border: none;
-      height: 36px;
-      width: 180px;
-      border-radius: 18px;
-      cursor: pointer;
-      transition: background-color 0.15s;
-    }
-    .cart-btn:hover {
-      background-color: #F6C202;
-    }
-  </style>
+  <link rel="stylesheet" href="3b.css">
 </head>
 <body>
   <button class="cart-btn">
