remove the style from the html & link to stylesheet

--- a/Lesson 3/3c.html
+++ b/Lesson 3/3c.html
@@ -5,24 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GitHub Sign Up</title>
-  <style>
-   .sign-up-btn {
-    cursor: pointer;
-    height: 36px;
-    width: 120px;
-    background-color: rgb(44, 157, 71);
-    color: white;
-    font-weight: bold;
-    border-radius: 4px;
-    border: none;
-    margin: 4px;
-    font-size: 15px;
-    transition: box-shadow 0.2s;
-   }
-   .sign-up-btn:hover {
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.15);
-   }
-  </style>
+  <!-- External CSS Link -->
+  <link rel="stylesheet" href="3c.css">
 </head>
 <body>
   <button class="sign-up-btn">
