remove style from html & link to stylesheet

--- a/Lesson 3/3d.html
+++ b/Lesson 3/3d.html
@@ -5,46 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bootstrap button</title>
-  <!-- Internal CSS -->
-  <style>
-    .getstarted {
-      margin-top: 4px;
-      margin-left: 4px;
-      background-color: rgb(121, 82, 179);
-      color: white;
-      border: none;
-      height: 32px;
-      width: 105px;
-      font-weight: bold;
-      border-radius: 4px;
-      cursor: pointer;
-      transition: background-color 0.2s;
+  <!-- External CSS Link -->
+  <link rel="stylesheet" href="3d.css">
 
-    }
-    .getstarted:hover {
-      background-color: rgb(103, 68, 154);
-    }
-
-    .download {
-      margin-top: 4px;
-      margin-left: 4px;
-      background-color:white;
-      color: rgb(108, 117, 125);
-      border: solid;
-      border-width: 1px;
-      border-color: rgb(108, 117, 125);
-      height: 34px;
-      width: 105px;
-      font-weight: bold;
-      border-radius: 4px;
-      cursor: pointer;
-      transition: background-color 0.15s, color 0.15s;
-    }
-    .download:hover {
-      background-color: rgb(108, 117, 125);
-      color: white;
-    }
-  </style>
 </head>
 
 <body>
