--- a/Lesson 3/3f.html
+++ b/Lesson 3/3f.html
@@ -5,53 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Challenge Exercise</title>
-  
-  <style>
-    /* Body Margin */
-    body {
-      margin: 5px;
-    }
-    .link:hover { 
-      color: rgb(162, 70, 37);
-    }
-    .price {
-      color:green;
-    }
-    .cart-btn {
-      background-color:rgb(255, 217, 28);
-      border: none;
-      height: 28px;
-      width: 110px;
-      border-radius: 14px;
-      margin: 4px;
-      cursor: pointer;
-      transition: opacity 0.15s, background-color 0.15s;
-    }
-    .cart-btn:hover {
-      background-color: #F6C202;
-    }
-    .cart-btn:active {
-      opacity: 0.5;
-    }
-
-    .buy-btn {
-      background-color: rgb(255, 164, 28);
-      border: none;
-      height: 28px;
-      width: 110px;
-      border-radius: 14px;
-      margin-left: 4px;
-      cursor: pointer;
-      transition: opacity 0.15s, background-color 0.15s;
-    }
-    .buy-btn:hover {
-      background-color: rgb(255, 144, 16);
-    }
-    .buy-btn:active{
-      opacity: 0.5;
-    }
-
-  </style>
+  <!-- External Stylesheet Link -->
+  <link rel="stylesheet" href="3f.css">
 
 </head>
 <body>
