--- a/Lesson 4/4a.html
+++ b/Lesson 4/4a.html
@@ -5,21 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Uber-button</title>
-  <style>
-    .uber-btn {
-      color: white;
-      background-color: black;
-      padding-top: 6px;
-      padding-bottom: 6px;
-      padding-left: 10px;
-      padding-right: 10px;
-      cursor: pointer;
-      transition: opacity 0.15s;
-    }
-    .uber-btn:hover {
-      opacity: 0.8;
-    }
-  </style>
+  <!-- External CSS Link -->
+  <link rel="stylesheet" href="4a.css">
 </head>
 <body>
   <button class="uber-btn">
