--- a/Lesson 4/4b.html
+++ b/Lesson 4/4b.html
@@ -5,23 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Amazon-Button</title>
-  <style>
-    .cart-btn {
-      background-color: #FED114;
-      border: none;
-      padding-top: 9px;
-      padding-bottom: 9px;
-      padding-left: 42px;
-      padding-right: 42px;
-      border-radius: 18px;
-      margin: 10px;
-      cursor: pointer;
-      transition: background-color 0.15s;
-    }
-    .cart-btn:hover {
-      background-color: #F6C202;
-    }
-  </style>
+  <!-- External CSS Link -->
+  <link rel="stylesheet" href="4b.css">
 </head>
 <body>
   <button class="cart-btn">
