--- a/Lesson 4/4c.html
+++ b/Lesson 4/4c.html
@@ -5,26 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GitHub Sign Up</title>
-  <style>
-   .sign-up-btn {
-    cursor: pointer;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 28px;
-    padding-right: 28px;
-    background-color: rgb(44, 157, 71);
-    color: white;
-    font-weight: bold;
-    border-radius: 4px;
-    border: none;
-    margin: 4px;
-    font-size: 15px;
-    transition: box-shadow 0.2s;
-   }
-   .sign-up-btn:hover {
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.15);
-   }
-  </style>
+  <!-- External CSS Link -->
+  <link rel="stylesheet" href="4c.css">
 </head>
 <body>
   <button class="sign-up-btn">
