--- a/Lesson 4/4e.html
+++ b/Lesson 4/4e.html
@@ -5,47 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Likedin Buttons</title>
-  <!-- Internal CSS -->
-  <style>
-    .apply-btn {
-      margin: 4px;
-      background-color: rgb(10, 102, 194);
-      border: none;
-      color: white;
-      font-weight: bold;
-      padding-top: 8px;
-      padding-bottom: 8px;
-      padding-left: 18px;
-      padding-right: 18px;
-      border-radius: 17px;
-      cursor: pointer;
-      transition: background-color 0.15s;
-    }
-    .apply-btn:hover {
-      background-color: #013470;
-    }
-
-    .save-btn {
-      margin: 4px;
-      background-color: white;
-      color: rgb(10, 102, 194);
-      font-weight: bold;
-      border: solid;
-      border-width: 1px;
-      padding-top: 6px;
-      padding-bottom: 6px;
-      padding-left: 18px;
-      padding-right: 18px;
-      border-radius: 17px;
-      cursor: pointer;
-      transition: border-width 0.15s, background-color 0.15s;
-    }
-    .save-btn:hover {
-      background-color: rgba(21, 102, 183, 0.21);
-      border-width: 2px;
-    }
-
-  </style>
+  <!-- External CSS Link -->
+  <link rel="stylesheet" href="4e.css">
 </head>
 
 <body>
