--- a/Lesson 4/4f.html
+++ b/Lesson 4/4f.html
@@ -5,82 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CSS-Basics Buttons </title>
-  <!-- Internal CSS for customizing the buttons -->
-  <style>
-    .subscribe-btn {
-      margin: 5px;
-      background-color: rgb(200,0,0);
-      color: white;
-      border: none;
-      padding-top: 10px;
-      padding-bottom: 10px;
-      padding-left: 16px;
-      padding-right: 16px;
-      margin-right: 8px;
-      border-radius: 2px;
-      cursor: pointer;
-      transition: opacity 0.15s;
-      vertical-align: top;
-    }
-    /*Pseudo class hover when we hover it applies the following 
-    properties to the subscribe button. and changes the background-color
-    to green but the rest property is from the above css block. */
-    .subscribe-btn:hover{ 
-      /* background-color: green; */
-      opacity: 0.5;
-    }
-    /* changes the color when we click on the button. */
-   .subscribe-btn:active{
-    background-color: purple;
-
-   }
-    
-   .join-btn{
-      margin: 5px;
-      border-style: solid;
-      border-color: rgb(41, 118, 211);
-      border-width: 1px;
-      border-radius:2px;
-      color:rgb(41, 118, 211);
-      cursor: pointer;
-      padding-top: 9px;
-      padding-bottom: 9px;
-      padding-left: 16px;
-      padding-right: 16px;
-      /* transition must be put into the base css style and not in psuedo class css style  */
-      transition: background-color 0.5s, /* Takes one second to change bg-color and txt-color */
-      color 0.5s;
-      
-   }
-    .join-btn:hover { /* On hovering over the join btn these properties will be applied overwriting the old same properties in the base css style class.*/
-      background-color:rgb(41, 118, 211) ;
-      color: white;
-    }
-    .join-btn:active { /* changes the properties when clicked */
-      opacity: 0.7;
-    }
-
-    .tweet-btn {
-      margin: 5px;
-      background-color: rgb(59, 154, 231);
-      color:white;
-      border:none;
-      padding-top: 10px;
-      padding-bottom: 10px;
-      padding-left: 16px;
-      padding-right: 16px;
-      border-radius: 18px;
-      font-weight: bold;
-      font-size: 15px;
-      cursor: pointer;
-      margin-left: 8px;
-      vertical-align: top;
-      /* box shadow */
-      box-shadow: 5px 5px 10px rgba(0 ,0 , 0, 0.2); /*alpha sets the amount of fade*/
-    }
-
-  </style>
-
+  <!-- External CSS Link for customizing the buttons -->
+  <link rel="stylesheet" href="4f.css">
 </head>
 <!-- Body of HTML -->
 <body>
