--- a/Lesson 4/4h.html
+++ b/Lesson 4/4h.html
@@ -5,27 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pagination</title>
-  <style>
-    .back {
-      margin: 5px;
-      padding-top: 10px;
-      padding-bottom: 10px;
-      padding-left: 7px;
-      padding-right: 7px;
-      cursor: pointer;
-    }
-    a{
-      margin: 5px;
-    }
-    .next {
-      margin: 5px;
-      padding-top: 10px;
-      padding-bottom: 10px;
-      padding-left: 7px;
-      padding-right: 7px;
-      cursor: pointer;      
-    }
-  </style>
+  <!-- External CSS Link -->
+  <link rel="stylesheet" href="4h.css">
 </head>
 
 <body>
