--- a/Lesson 4/4k.html
+++ b/Lesson 4/4k.html
@@ -5,25 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Margin and padding together</title>
-  <style>
-    button{
-     border: none;
-     color: white;
-     background-color: green;
-     cursor:pointer;
-     padding: 6px 15px;
-     margin-left: 10px;
-     margin-right: 10px;
-     transition: padding-left 0.2s, padding-right 0.2s, margin-left 0.2s, margin-right 0.2s;
-    }
-    button:hover {
-      padding-left: 25px;
-      padding-right: 25px;
-      margin-right: 0px;
-      margin-left: 0px;
-    }
-
-  </style>
+  <!-- External CSS Link -->
+  <link rel="stylesheet" href="4k.css">
 </head>
 <body>
 
