remove the styles from html & link to stylesheet

--- a/Lesson 5/5a.html
+++ b/Lesson 5/5a.html
@@ -5,14 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Text Styling</title>
-  <!-- Internal CSS Code -->
-  <style>
-    .txt-style {
-      font-family: Tahoma;
-      font-weight: bold;
-      font-size: 30px;
-    }
-  </style>
+  <!-- External CSS Link -->
+  <link rel="stylesheet" href="5a.css">
 </head>
 <body>
   <p class="txt-style">This is Tahoma Font</p>
