--- a/Lesson 5/5b.html
+++ b/Lesson 5/5b.html
@@ -5,23 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Text Styles</title>
-  <!-- CSS Code -->
-  <style>
-    /* Heading Text */
-    .para-style {
-      width: 370px;
-      font-family: Arial;
-      font-weight: bold;
-      font-size: 30px;
-    }
-    /* span example  */
-    .sales-txt {
-      font-weight: 100;
-      font-size: 20px;
-      font-style: italic;
-      color: rgb(228, 31, 0);
-    }
-  </style>
+  <!-- External CSS Link -->
+  <link rel="stylesheet" href="5b.css">
 </head>
 <body>
   <p class="para-style">
