--- a/Lesson 5/5c.html
+++ b/Lesson 5/5c.html
@@ -5,35 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Text Styling </title>
-  <style>
-    * {
-      padding: 0;
-      margin: 0 2px;
-      font-family: Verdana;
-    }
-    .heading {
-      margin-top: 0;
-      font-family: Verdana;
-      margin-bottom: 2px;
-    }
-
-    .head-desc {
-      color: rgb(148, 148, 148);
-      margin-bottom: 20px;
-    }
-    .content {
-      width: 280px;
-      line-height: 22px;
-      margin-bottom: 14px;
-    }
-    .start-btn {
-      background-color: rgb(7, 161, 7);
-      border: none;
-      color: white;
-      padding: 6px 12px;
-      border-radius: 6px;
-    }
-  </style>
+  <!-- External CSS Link -->
+  <link rel="stylesheet" href="5c.css">
 </head>
 
 <body>
