remove the styles from html & link to stylesheet

--- a/Lesson 5/5d.html
+++ b/Lesson 5/5d.html
@@ -5,18 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Text Styling</title>
-  <!-- CSS Code -->
-  <style>
-    * {
-      text-align: center;
-      font-family: Arial;
-    }
-   
-    a {
-      color: rgb(48, 108, 177);
-      text-decoration: none;
-    }
-  </style>
+  <!-- External CSS Link -->
+  <link rel="stylesheet" href="5d.css">
 </head>
 <body>
   <h1>
