--- a/Lesson 5/5e.html
+++ b/Lesson 5/5e.html
@@ -5,37 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Challenge Exercise</title>
-  <!-- CSS Code -->
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      text-align: center;
-      font-family: Arial;
-      font-weight: bold;
-    }
-    .new {
-      font-size: 10px;
-      margin: 10px auto;
-      color: rgb(228, 105, 4);
-    }
-    h1 {
-      margin-bottom: 6px;
-    }
-    .price {
-      font-weight: 100;
-      font-size: small;
-      margin: 6px auto;
-    }
-    button {
-      border: none;
-      background-color: rgb(0, 140, 255);
-      color: white;
-      padding: 5px 12px;
-      border-radius: 20px;
-      margin: 2px;
-    }
-  </style>
+  <!-- External CSS Link -->
+  <link rel="stylesheet" href="5e.css">
 </head>
 <body>
   <p class="new">
