--- a/Lesson 5/5f.html
+++ b/Lesson 5/5f.html
@@ -5,39 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Challenge Exercise</title>
-  <!-- CSS Code -->
-  <style>
-    * {
-      font-family: Arial;
-    }
-
-    .price {
-      font-size: 24px;
-      margin-bottom: 0;
-    }
-
-    .currency {
-      margin-top: 0;
-      font-size:10px;
-      color: rgb(63, 63, 63);
-    }
-    .green {
-      margin-top: 4px;
-      font-size: 12px;
-      color: green;
-      margin-bottom: 4px;
-    }
-    .after {
-      margin-top: 0;
-      font-size: 11px;
-      color: rgb(114, 114, 114);
-    }
-
-    .red {
-      color:rgb(211, 0, 0);
-    }
-
-  </style>
+  <!-- External CSS Link -->
+  <link rel="stylesheet" href="5f.css">
 </head>
 <body>
   <p class="price">
