--- a/Lesson 5/5g.html
+++ b/Lesson 5/5g.html
@@ -5,30 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Challenge Exercise</title>
-  <!-- CSS Code -->
-  <style>
-    * {
-      font-family: Arial;
-      font-size: 14px;
-    }
-
-    .title {
-      font-weight: bold;
-      margin-bottom: 0;
-    }
-    .username {
-      font-weight: 100;
-      color: grey;
-    }
-   .user-tag {
-    color:rgb(0, 170, 255);
-   } 
-  .para2 {
-    margin-top: 4px;
-    width: 450px;
-  }
-
-  </style>
+  <!-- External CSS Link -->
+  <link rel="stylesheet" href="5g.css">
 </head>
 <body>
 
