--- a/youtube.html
+++ b/youtube.html
@@ -2,30 +2,8 @@
 <html>
   <head>
     <title>Youtube.com Clone</title>
-    <style>
-      .thumbnail {
-        
-        width: 300px;
-        /* height: 300px; */
-
-        /* object-fit: cover; */
-        /* object-position: left; */
-        /* object-position: right; */
-        /* object-position: center; */ /* Default */ 
-        
-        /* object-fit: contain; */
-        /* object-position: top; */
-        /* object-position: bottom; */
-        /* Default : */
-        /* object-position: center;   */
-        /* border: 2px solid red; */
-      }
-
-      .search-bar {
-        font-size: 20px;
-        margin-left: 12px;
-      }
-    </style>
+    <!-- External CSS Link -->
+    <link rel="stylesheet" href="youtube.css">
   </head>
   <body>
     <img class="thumbnail" src="img/thumbnail-1.webp" alt="video-1 thumbnail">
