add lesson 8 tutorial HTML & CSS Code

--- a/youtube.html
+++ b/youtube.html
@@ -8,5 +8,17 @@
   <body>
     <img class="thumbnail" src="img/thumbnail-1.webp" alt="video-1 thumbnail">
     <input class="search-bar" type="text" placeholder="Search">
+
+    <p class="video-title">
+      Talking Tech and AI with Google CEO Sundar Pichai!
+    </p>
+
+    <p class="video-author">
+      Marques Brownlee
+    </p>
+
+    <p class="video-stats">
+      3.4M views &#813; 6 months ago
+    </p>
   </body>
 </html>
