add the HTML code for solution of Exercise 8b

--- a/intro-to-html/Lesson 8/8b.html
+++ b/intro-to-html/Lesson 8/8b.html
@@ -1,4 +1,4 @@
-<!-- Create a paragraph and 2 buttons and place them on the same line. -->\
+<!-- Create a paragraph and 2 buttons and place them on the same line. -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
