--- a/intro-to-html/Lesson 8/8d.html
+++ b/intro-to-html/Lesson 8/8d.html
@@ -11,9 +11,9 @@
 </head>
 <body>
 
-  <input type="text" placeholder="First Name">
-  <input type="text" placeholder="Last Name">
-  <input type="text" placeholder="Email">
+  <input class="name" type="text" placeholder="First Name">
+  <input class="name" type="text" placeholder="Last Name">
+  <input class="email" type="text" placeholder="Email">
 
   <button>
     Sign up
