add video-previews to the HTML

--- a/youtube.html
+++ b/youtube.html
@@ -6,19 +6,46 @@
     <link rel="stylesheet" href="youtube.css">
   </head>
   <body>
-    <img class="thumbnail" src="img/thumbnail-1.webp" alt="video-1 thumbnail">
+    <!-- Search Bar -->
     <input class="search-bar" type="text" placeholder="Search">
 
-    <p class="video-title">
-      Talking Tech and AI with Google CEO Sundar Pichai!
-    </p>
+    <!-- Video Preview -->
+    <div class="video-preview">
 
-    <p class="video-author">
-      Marques Brownlee
-    </p>
+      <img class="thumbnail" src="img/thumbnail-1.webp" alt="video-1 thumbnail">
+      
+      <p class="video-title">
+        Talking Tech and AI with Google CEO Sundar Pichai!
+      </p>
 
-    <p class="video-stats">
-      3.4M views &#813; 6 months ago
-    </p>
+      <p class="video-author">
+        Marques Brownlee
+      </p>
+
+      <p class="video-stats">
+        3.4M views &#813; 6 months ago
+      </p>
+
+    </div>
+
+    <!-- 2nd Video Preview  -->
+    <div class="video-preview">
+
+      <img class="thumbnail" src="img/thumbnail-2.webp" alt="video-1 thumbnail">
+      
+      <p class="video-title">
+        Try Not To Laugh Challenge #9
+      </p>
+
+      <p class="video-author">
+        Markiplier
+      </p>
+
+      <p class="video-stats">
+        19M views &#183; 4 years ago
+      </p>
+
+    </div>
+
   </body>
 </html>
