modify HTML Entity

--- a/youtube.html
+++ b/youtube.html
@@ -9,7 +9,7 @@
     <!-- Search Bar -->
     <input class="search-bar" type="text" placeholder="Search">
 
-    <!-- Video Preview -->
+    <!-- 1st Video Preview -->
     <div class="video-preview">
 
       <img class="thumbnail" src="img/thumbnail-1.webp" alt="video-1 thumbnail">
@@ -23,7 +23,7 @@
       </p>
 
       <p class="video-stats">
-        3.4M views &#813; 6 months ago
+        3.4M views &#183 6 months ago
       </p>
 
     </div>
