modify the img src

--- a/intro-to-html/Lesson 9/9f.html
+++ b/intro-to-html/Lesson 9/9f.html
@@ -14,7 +14,7 @@
 
   <div class="container">
 
-    <img src="img/cat.jpeg" alt="cat image">
+    <img src="img/cat-1.jpeg" alt="cat image">
 
     <h2>Oliver</h2>
     <p>2 mutual friends</p>
