add the video preview-3 code

--- a/youtube.html
+++ b/youtube.html
@@ -44,6 +44,7 @@
       </div>
 
     </div>
+
 <!-- Video Preview -2 -->
     <div class="video-preview">
 
@@ -74,9 +75,38 @@
       </div>
 
     </div>
-      </p>
+
+    <!-- Video Preview -3 -->
+    <div class="video-preview">
+
+      <div class="thumbnail-row">
+        <img class="thumbnail" src="thumbnails/thumbnail-3.webp" alt="video-3 thumbnail">
+      </div>
+
+      <div>
+
+        <div class="channel-picture">
+          <img class="profile-picture" src="channel-img/channel-3.jpeg" alt="channel-3 image">
+        </div>
+
+        <div class="video-info">
+          <p class="video-title">
+            Crazy Tik Toks Taken Moments Before DISASTER
+          </p>
+    
+          <p class="video-author">
+            SSSniperWolf
+          </p>
+    
+          <p class="video-stats">
+            12M views &#183 1 year ago
+          </p>
+        </div>
+
+      </div>
 
     </div>
 
+    </div>
   </body>
 </html>
