replace inline block with grid properties

--- a/youtube.html
+++ b/youtube.html
@@ -21,7 +21,7 @@
         <img class="thumbnail" src="thumbnails/thumbnail-1.webp" alt="video-1 thumbnail">
       </div>
 
-      <div>
+      <div class="video-info-grid">
 
         <div class="channel-picture">
           <img class="profile-picture" src="channel-img/channel-1.jpeg" alt="channel-1 image">
@@ -52,7 +52,7 @@
         <img class="thumbnail" src="thumbnails/thumbnail-2.webp" alt="video-2 thumbnail">
       </div>
 
-      <div>
+      <div class="video-info-grid">
 
         <div class="channel-picture">
           <img class="profile-picture" src="channel-img/channel-2.jpeg" alt="channel-2 image">
@@ -83,7 +83,7 @@
         <img class="thumbnail" src="thumbnails/thumbnail-3.webp" alt="video-3 thumbnail">
       </div>
 
-      <div>
+      <div class="video-info-grid">
 
         <div class="channel-picture">
           <img class="profile-picture" src="channel-img/channel-3.jpeg" alt="channel-3 image">
