--- a/intro-to-html/grid.html
+++ b/intro-to-html/grid.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head></head>
-  <body>
+  <body style="padding-bottom: 1000px;">
 
     <div style="display: grid;
     grid-template-columns: 100px 100px;">
@@ -32,6 +32,22 @@
       <div style="background-color: lightblue;">100px</div>
       <div style="background-color: lightpink;">1fr</div>
       <div style="background-color: lightblue;">2fr</div>
+    </div>
+
+    <!-- for creating the youtube grid layout of 3 video previews -->
+    <div style="display: grid;
+    margin-top: 30px;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 20px;
+    row-gap: 40px;
+    ">
+    
+      <div style="background-color: lightblue; height: 200px;">1fr</div>
+      <div style="background-color: lightpink; height: 200px;">1fr</div>
+      <div style="background-color: lightblue; height: 200px;">1fr</div>
+      <div style="background-color: lightpink; height: 200px;">1fr</div>
+      <div style="background-color: lightblue; height: 200px;">1fr</div>
+      <div style="background-color: lightpink; height: 200px;">1fr</div>
     </div>
   </body>
 </html>
