modify the External CSS link & add header section

--- a/youtube.html
+++ b/youtube.html
@@ -7,12 +7,27 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <!-- External CSS Link -->
-    <link rel="stylesheet" href="youtube.css">
+    <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="styles/video.css">
+    <link rel="stylesheet" href="styles/general.css">
   </head>
 
   <body>
-    <!-- Search Bar -->
-    <input class="search-bar" type="text" placeholder="Search">
+    <!-- Header / Navbar -->
+    <div class="header">
+
+      <div class="left-section"></div>
+      left section
+      <div class="middle-section">
+        <!-- Search Bar -->
+      <input class="search-bar" type="text" placeholder="Search">
+
+      </div>
+
+      <div class="right-section"></div>
+      right section
+    </div>
+
   <!-- Main Grid container containing all the video previews -->
     <div class="video-grid">
         <!-- Video Preview -1 -->
