--- a/youtube.html
+++ b/youtube.html
@@ -16,16 +16,20 @@
     <!-- Header / Navbar -->
     <div class="header">
 
-      <div class="left-section"></div>
-      left section
+      <div class="left-section">
+        left section
+      </div>
+      
       <div class="middle-section">
         <!-- Search Bar -->
       <input class="search-bar" type="text" placeholder="Search">
 
       </div>
 
-      <div class="right-section"></div>
-      right section
+      <div class="right-section">
+        right section
+      </div>
+      
     </div>
 
   <!-- Main Grid container containing all the video previews -->
