--- a/youtube.html
+++ b/youtube.html
@@ -17,7 +17,8 @@
     <div class="header">
 
       <div class="left-section">
-        left section
+        <img class="hamburger-menu" src="icons/hamburger-menu.svg" alt="hamburger-menu">
+        <img class="youtube-logo" src="icons/youtube-logo.svg" alt="youtube-logo">
       </div>
       
       <div class="middle-section">
