--- a/youtube.html
+++ b/youtube.html
@@ -24,7 +24,8 @@
       <div class="middle-section">
         <!-- Search Bar -->
       <input class="search-bar" type="text" placeholder="Search">
-
+      <button class="search-btn"><img src="icons/search.svg" alt="search-button-icon"></button>
+      <button class="voice-search-btn"><img src="icons/voice-search-icon.svg" alt="voice-search-icon"></button>
       </div>
 
       <div class="right-section">
