add icons in the right section of the header

--- a/youtube.html
+++ b/youtube.html
@@ -29,7 +29,10 @@
       </div>
 
       <div class="right-section">
-        right section
+        <img class="upload-icon" src="icons/upload.svg" alt="upload-icon">
+        <img class="yt-apps-icon" src="icons/youtube-apps.svg" alt="youtube-apps-icon">
+        <img class="notifications-icon" src="icons/notifications.svg" alt="notifications-icon">
+        <img class="current-user-picture" src="channel-img/my-channel.jpeg" alt="current-user-picture">
       </div>
       
     </div>
