add another header-div to practice position-fixed

--- a/intro-to-html/Lesson 14/position.html
+++ b/intro-to-html/Lesson 14/position.html
@@ -7,6 +7,12 @@
   <title>Position Practice</title>
 </head>
 <body>
+
+  <div style="
+    background-color: black;
+    color: white;
+    position: fixed;
+    ">header</div>
   
   <div style="
     background-color: lightblue;
@@ -20,6 +26,5 @@
     height: 200px;
     width: 200px;
   ">div 2</div>
-  
 </body>
 </html>
