--- a/intro-to-html/Lesson 14/position.html
+++ b/intro-to-html/Lesson 14/position.html
@@ -6,7 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Position Practice</title>
 </head>
-<body>
+<body style="
+  height: 3000px;
+  ">
 
   <div style="
     background-color: black;
