--- a/intro-to-html/Lesson 14/position.html
+++ b/intro-to-html/Lesson 14/position.html
@@ -8,12 +8,17 @@
 </head>
 <body style="
   height: 3000px;
+  padding-top: 60px;
   ">
 
   <div style="
     background-color: black;
     color: white;
     position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 50px;
     ">header</div>
   
   <div style="
@@ -21,6 +26,7 @@
     height: 200px;
     width: 200px;
     position: static;
+    margin-top: 60px;
   ">div 1</div>
 
   <div style="
