add sidebar-div to practice for the project

--- a/intro-to-html/Lesson 14/position.html
+++ b/intro-to-html/Lesson 14/position.html
@@ -20,6 +20,16 @@
     right: 0;
     height: 50px;
     ">header</div>
+
+    <div style="
+     background-color: green; 
+     color: white;
+     position: fixed;
+     left: 0;
+     bottom: 0;
+     top: 50px;
+     width: 72px;
+    ">sidebar</div>
   
   <div style="
     background-color: lightblue;
