add sidebar below the header & link to sidebar.css

--- a/youtube.html
+++ b/youtube.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="styles/video.css">
     <link rel="stylesheet" href="styles/general.css">
+    <link rel="stylesheet" href="styles/sidebar.css">
   </head>
 
   <body>
@@ -35,6 +36,10 @@
         <img class="current-user-picture" src="channel-img/my-channel.jpeg" alt="current-user-picture">
       </div>
       
+    </div>
+    <!-- Sidebar -->
+    <div class="sidebar">
+      sidebar
     </div>
 
   <!-- Main Grid container containing all the video previews -->
