add the practice code for position:absolute & position:relative

--- a/intro-to-html/Lesson 14/position.html
+++ b/intro-to-html/Lesson 14/position.html
@@ -20,6 +20,7 @@
     left: 0;
     right: 0;
     height: 50px;
+    z-index: 1;
     ">header</div>
 
     <div style="
@@ -30,7 +31,25 @@
      bottom: 0;
      top: 50px;
      width: 72px;
-    ">sidebar</div>
+    ">sidebar
+    <div style="
+    position:absolute;
+    background-color: red;
+    color: white;
+    right: 0;
+    top: 0;
+    z-index: 2;
+  ">X</div>
+  </div>
+
+    <div style="
+      position:absolute;
+      background-color: red;
+      color: white;
+      right: 10px;
+      top: 60px;
+      z-index: 2;
+    ">absolute</div>
   
   <div style="
     background-color: lightblue;
@@ -44,6 +63,16 @@
     background-color: lightpink;  
     height: 200px;
     width: 200px;
-  ">div 2</div>
+    position: relative;
+  ">div 2
+    <div style="
+    position:absolute;
+    background-color: black;
+    color: white;
+    right: 10px;
+    bottom: 10px;
+    z-index: 2;
+    ">5:00</div>
+  </div>
 </body>
 </html>
