--- a/youtube.html
+++ b/youtube.html
@@ -32,7 +32,10 @@
       <div class="right-section">
         <img class="upload-icon" src="icons/upload.svg" alt="upload-icon">
         <img class="yt-apps-icon" src="icons/youtube-apps.svg" alt="youtube-apps-icon">
-        <img class="notifications-icon" src="icons/notifications.svg" alt="notifications-icon">
+        <div class="notifications-icon-container">
+          <img class="notifications-icon" src="icons/notifications.svg" alt="notifications-icon">
+          <div class="notifications-count">3</div>
+        </div>
         <img class="current-user-picture" src="channel-img/my-channel.jpeg" alt="current-user-picture">
       </div>
       
@@ -49,6 +52,7 @@
 
         <div class="thumbnail-row">
           <img class="thumbnail" src="thumbnails/thumbnail-1.webp" alt="video-1 thumbnail">
+          <div class="video-time">14:20</div>
         </div>
 
         <div class="video-info-grid">
@@ -80,6 +84,7 @@
 
         <div class="thumbnail-row">
           <img class="thumbnail" src="thumbnails/thumbnail-2.webp" alt="video-2 thumbnail">
+          <div class="video-time">8:22</div>
         </div>
 
         <div class="video-info-grid">
@@ -111,6 +116,7 @@
 
         <div class="thumbnail-row">
           <img class="thumbnail" src="thumbnails/thumbnail-3.webp" alt="video-3 thumbnail">
+          <div class="video-time">9:13</div>
         </div>
 
         <div class="video-info-grid">
@@ -142,6 +148,7 @@
 
         <div class="thumbnail-row">
           <img class="thumbnail" src="thumbnails/thumbnail-4.webp" alt="video-1 thumbnail">
+          <div class="video-time">22:09</div>
         </div>
 
         <div class="video-info-grid">
@@ -173,6 +180,7 @@
 
         <div class="thumbnail-row">
           <img class="thumbnail" src="thumbnails/thumbnail-5.webp" alt="video-2 thumbnail">
+          <div class="video-time">11:17</div>
         </div>
 
         <div class="video-info-grid">
@@ -204,6 +212,7 @@
 
         <div class="thumbnail-row">
           <img class="thumbnail" src="thumbnails/thumbnail-6.webp" alt="video-3 thumbnail">
+          <div class="video-time">19:59</div>
         </div>
 
         <div class="video-info-grid">
