add sidebar divs & icons inside the divs

--- a/youtube.html
+++ b/youtube.html
@@ -42,7 +42,13 @@
     </div>
     <!-- Sidebar -->
     <div class="sidebar">
-      sidebar
+      <div class="sidebar-link"><img src="icons/home.svg" alt="home icon">
+      </div>
+      <div class="sidebar-link"><img src="icons/explore.svg" alt="explore icon"></div>
+      <div class="sidebar-link"><img src="icons/subscriptions.svg" alt="subscriptionss icon"></div>
+      <div class="sidebar-link"><img src="icons/originals.svg" alt="originals icon"></div>
+      <div class="sidebar-link"><img src="icons/youtube-music.svg" alt="youtube-music icon"></div>
+      <div class="sidebar-link"><img src="icons/library.svg" alt="library icon"></div>
     </div>
 
   <!-- Main Grid container containing all the video previews -->
