--- a/youtube.html
+++ b/youtube.html
@@ -25,16 +25,32 @@
       <div class="middle-section">
         <!-- Search Bar -->
       <input class="search-bar" type="text" placeholder="Search">
-      <button class="search-btn"><img class="search-icon" src="icons/search.svg" alt="search-button-icon"></button>
-      <button class="voice-search-btn"><img class="voice-search-icon" src="icons/voice-search-icon.svg" alt="voice-search-icon"></button>
+      <button class="search-btn">
+        <img class="search-icon" src="icons/search.svg" alt="search-button-icon">
+        <div class="tooltip">Search</div>
+      </button>
+      <button class="voice-search-btn">
+        <img class="voice-search-icon" src="icons/voice-search-icon.svg" alt="voice-search-icon">
+        <div class="tooltip">Search with your voice</div>
+      </button>
       </div>
 
       <div class="right-section">
-        <img class="upload-icon" src="icons/upload.svg" alt="upload-icon">
-        <img class="yt-apps-icon" src="icons/youtube-apps.svg" alt="youtube-apps-icon">
+        <div class="upload-icon-container">
+          <img class="upload-icon" src="icons/upload.svg" alt="upload-icon">
+          <div class="tooltip">Create</div>
+        </div>
+
+        <div class="yt-apps-icon-container">
+          <img class="yt-apps-icon" src="icons/youtube-apps.svg" alt="youtube-apps-icon">
+          <div class="tooltip">YouTube apps</div>
+
+        </div>
+
         <div class="notifications-icon-container">
           <img class="notifications-icon" src="icons/notifications.svg" alt="notifications-icon">
           <div class="notifications-count">3</div>
+          <div class="tooltip">Notifications</div>
         </div>
         <img class="current-user-picture" src="channel-img/my-channel.jpeg" alt="current-user-picture">
       </div>
@@ -42,13 +58,37 @@
     </div>
     <!-- Sidebar -->
     <div class="sidebar">
-      <div class="sidebar-link"><img src="icons/home.svg" alt="home icon">
+      <!-- sidebar link 1 -->
+      <div class="sidebar-link">
+        <img src="icons/home.svg" alt="home icon">
+        <div>Home</div>
       </div>
-      <div class="sidebar-link"><img src="icons/explore.svg" alt="explore icon"></div>
-      <div class="sidebar-link"><img src="icons/subscriptions.svg" alt="subscriptionss icon"></div>
-      <div class="sidebar-link"><img src="icons/originals.svg" alt="originals icon"></div>
-      <div class="sidebar-link"><img src="icons/youtube-music.svg" alt="youtube-music icon"></div>
-      <div class="sidebar-link"><img src="icons/library.svg" alt="library icon"></div>
+      <!-- sidebar link 2 -->
+      <div class="sidebar-link">
+        <img src="icons/explore.svg" alt="explore icon">
+        <div>Explore</div>
+      </div>
+      <!-- sidebar link 3 -->
+      <div class="sidebar-link">
+        <img src="icons/subscriptions.svg" alt="subscriptionss icon">
+        <div>Subscriptions</div>
+      </div>
+      <!-- sidebar link 4 -->
+      <div class="sidebar-link">
+        <img src="icons/originals.svg" alt="originals icon">
+        <div>Originals</div>
+      </div>
+      <!-- sidebar link 5 -->
+      <div class="sidebar-link">
+        <img src="icons/youtube-music.svg" alt="youtube-music icon">
+        <div>YouTube Music</div>
+      </div>
+      <!-- sidebar link 6 -->
+      <div class="sidebar-link">
+        <img src="icons/library.svg" alt="library icon">
+        <div>Library</div>        
+      </div>
+      <!-- sidebar closing tag -->
     </div>
 
   <!-- Main Grid container containing all the video previews -->
