--- a/youtube.html
+++ b/youtube.html
@@ -104,7 +104,18 @@
         <div class="video-info-grid">
 
           <div class="channel-picture">
-            <a href="https://www.youtube.com/c/mkbhd"><img class="profile-picture" src="channel-img/channel-1.jpeg" alt="channel-1 image"></a>
+            <a href="https://www.youtube.com/c/mkbhd">
+              <div class="profile-container">
+                <img class="profile-picture" src="channel-img/channel-1.jpeg" alt="channel-1 image">
+                <div class="profile-tooltip">
+                  <div class="tooltip-img-container"><img class="tooltip-img" src="channel-img/channel-1.jpeg" alt="tooltip-channel-picture"></div>
+                  <div class="tooltip-txt-container">
+                    <h3>Marquese Brownlee</h3>
+                    <p>15M Subscribers</p>
+                  </div>
+                </div>
+              </div>
+            </a>
           </div>
 
           <div class="video-info">
