duplicate  & modify tooltip for video preview-2

--- a/youtube.html
+++ b/youtube.html
@@ -147,7 +147,18 @@
         <div class="video-info-grid">
 
           <div class="channel-picture">
-            <a href="https://www.youtube.com/c/markiplier"><img class="profile-picture" src="channel-img/channel-2.jpeg" alt="channel-2 image"></a>
+            <a href="https://www.youtube.com/c/markiplier">
+              <div class="profile-container">
+                <img class="profile-picture" src="channel-img/channel-2.jpeg" alt="channel-2 image">
+                <div class="profile-tooltip">
+                  <div class="tooltip-img-container"><img class="tooltip-img" src="channel-img/channel-2.jpeg" alt="tooltip-channel-picture"></div>
+                  <div class="tooltip-txt-container">
+                    <h3>Markiplier</h3>
+                    <p>34.9M Subscribers</p>
+                  </div>
+                </div>
+              </div>
+            </a>
           </div>
 
           <div class="video-info">
