duplicate tooltip & modify for video preview-3

--- a/youtube.html
+++ b/youtube.html
@@ -190,7 +190,18 @@
         <div class="video-info-grid">
 
           <div class="channel-picture">
-            <a href="https://www.youtube.com/user/SSSniperWolf"><img class="profile-picture" src="channel-img/channel-3.jpeg" alt="channel-3 image"></a>
+            <a href="https://www.youtube.com/user/SSSniperWolf">
+              <div class="profile-container">
+                <img class="profile-picture" src="channel-img/channel-3.jpeg" alt="channel-3 image">
+                <div class="profile-tooltip">
+                  <div class="tooltip-img-container"><img class="tooltip-img" src="channel-img/channel-3.jpeg" alt="tooltip-channel-picture"></div>
+                  <div class="tooltip-txt-container">
+                    <h3>SSSniperWolf</h3>
+                    <p>33.5M Subscribers</p>
+                  </div>
+                </div>
+              </div>
+            </a>
           </div>
 
           <div class="video-info">
