duplicate & modify tooltip for video preview=4

--- a/youtube.html
+++ b/youtube.html
@@ -233,7 +233,18 @@
         <div class="video-info-grid">
 
           <div class="channel-picture">
-            <a href="https://www.youtube.com/c/veritasium"><img class="profile-picture" src="channel-img/channel-4.jpeg" alt="channel-1 image"></a>
+            <a href="https://www.youtube.com/c/veritasium">
+              <div class="profile-container">
+                <img class="profile-picture" src="channel-img/channel-4.jpeg" alt="channel-1 image">
+                <div class="profile-tooltip">
+                  <div class="tooltip-img-container"><img class="tooltip-img" src="channel-img/channel-4.jpeg" alt="tooltip-channel-picture"></div>
+                  <div class="tooltip-txt-container">
+                    <h3>Veritasium</h3>
+                    <p>13.7M Subscribers</p>
+                  </div>
+                </div>
+              </div>
+            </a>
           </div>
 
           <div class="video-info">
