--- a/youtube.html
+++ b/youtube.html
@@ -276,7 +276,19 @@
         <div class="video-info-grid">
 
           <div class="channel-picture">
-            <a href="https://www.youtube.com/c/CSDojo"><img class="profile-picture" src="channel-img/channel-5.jpeg" alt="channel-2 image"></a>
+            <a href="https://www.youtube.com/c/CSDojo">
+              <div class="profile-container">
+                <img class="profile-picture" src="channel-img/channel-5.jpeg" alt="channel-2 image">
+                <div class="profile-tooltip">
+                  <div class="tooltip-img-container"><img class="tooltip-img" src="channel-img/channel-5.jpeg" alt="tooltip-channel-picture"></div>
+                  <div class="tooltip-txt-container">
+                    <h3>CS Dojo</h3>
+                    <p>1.9M Subscribers</p>
+                  </div>
+                </div>
+              </div>
+
+            </a>
           </div>
 
           <div class="video-info">
