--- a/youtube.html
+++ b/youtube.html
@@ -320,7 +320,18 @@
         <div class="video-info-grid">
 
           <div class="channel-picture">
-            <a href="https://www.youtube.com/channel/UCX6OQ3DkcsbYNE6H8uQQuVA"><img class="profile-picture" src="channel-img/channel-6.jpeg" alt="channel-3 image"></a>
+            <a href="https://www.youtube.com/channel/UCX6OQ3DkcsbYNE6H8uQQuVA">
+              <div class="profile-container">
+                <img class="profile-picture" src="channel-img/channel-6.jpeg" alt="channel-3 image">
+                <div class="profile-tooltip">
+                  <div class="tooltip-img-container"><img class="tooltip-img" src="channel-img/channel-6.jpeg" alt="tooltip-channel-picture"></div>
+                  <div class="tooltip-txt-container">
+                    <h3>MrBeast</h3>
+                    <p>156M Subscribers</p>
+                  </div>
+                </div>
+              </div>
+            </a>
           </div>
 
           <div class="video-info">
