duplicate & modify tooltip for video preview-7

--- a/youtube.html
+++ b/youtube.html
@@ -363,7 +363,18 @@
         <div class="video-info-grid">
 
           <div class="channel-picture">
-            <a href="https://www.youtube.com/channel/UCP5tjEmvPItGyLhmjdwP7Ww"><img class="profile-picture" src="channel-img/channel-7.jpeg" alt="channel-3 image"></a>
+            <a href="https://www.youtube.com/channel/UCP5tjEmvPItGyLhmjdwP7Ww">
+              <div class="profile-container">
+                <img class="profile-picture" src="channel-img/channel-7.jpeg" alt="channel-7 image">
+                <div class="profile-tooltip">
+                  <div class="tooltip-img-container"><img class="tooltip-img" src="channel-img/channel-7.jpeg" alt="tooltip-channel-picture"></div>
+                  <div class="tooltip-txt-container">
+                    <h3>RealLifeLore</h3>
+                    <p>6.84M Subscribers</p>
+                  </div>
+                </div>
+              </div>
+            </a>
           </div>
 
           <div class="video-info">
