duplicate & modify tooltip for video preview-8 & fixed links

--- a/youtube.html
+++ b/youtube.html
@@ -399,23 +399,34 @@
       <div class="video-preview">
 
         <div class="thumbnail-row">
-          <a href="https://www.youtube.com/watch?v=9iMGFqMmUFs"><img class="thumbnail" src="thumbnails/thumbnail-8.webp" alt="video-3 thumbnail"></a>
+          <a href="https://www.youtube.com/watch?v=lFm4EM1juls"><img class="thumbnail" src="thumbnails/thumbnail-8.webp" alt="video-3 thumbnail"></a>
           <div class="video-time">7:12</div>
         </div>
 
         <div class="video-info-grid">
 
           <div class="channel-picture">
-            <a href="https://www.youtube.com/teded"><img class="profile-picture" src="channel-img/channel-8.jpeg" alt="channel-3 image"></a>
+            <a href="https://www.youtube.com/channel/UCHAK6CyegY22Zj2GWrcaIxg">
+              <div class="profile-container">
+                <img class="profile-picture" src="channel-img/channel-8.jpeg" alt="channel-8 image">
+                <div class="profile-tooltip">
+                  <div class="tooltip-img-container"><img class="tooltip-img" src="channel-img/channel-8.jpeg" alt="tooltip-channel-picture"></div>
+                  <div class="tooltip-txt-container">
+                    <h3>Tech Vision</h3>
+                    <p>814K Subscribers</p>
+                  </div>
+                </div>
+              </div>
+            </a>
           </div>
 
           <div class="video-info">
             <p class="video-title">
-              <a href="https://www.youtube.com/watch?v=9iMGFqMmUFs">Inside The World's Biggest Passenger Plane</a>
+              <a href="https://www.youtube.com/watch?v=lFm4EM1juls">Inside The World's Biggest Passenger Plane</a>
             </p>
       
             <p class="video-author">
-              <a href="https://www.youtube.com/teded" class="channel-link">Tech Vision</a>
+              <a href="https://www.youtube.com/channel/UCHAK6CyegY22Zj2GWrcaIxg" class="channel-link">Tech Vision</a>
             </p>
       
             <p class="video-stats">
