duplicate & modify tooltip for video preview-9 & fix the links

--- a/youtube.html
+++ b/youtube.html
@@ -442,23 +442,34 @@
       <div class="video-preview">
 
         <div class="thumbnail-row">
-          <a href="https://www.youtube.com/watch?v=9iMGFqMmUFs"><img class="thumbnail" src="thumbnails/thumbnail-9.webp" alt="video-3 thumbnail"></a>
+          <a href="https://www.youtube.com/watch?v=ixmxOlcrlUc"><img class="thumbnail" src="thumbnails/thumbnail-9.webp" alt="video-3 thumbnail"></a>
           <div class="video-time">13:17</div>
         </div>
 
         <div class="video-info-grid">
 
           <div class="channel-picture">
-            <a href="https://www.youtube.com/teded"><img class="profile-picture" src="channel-img/channel-9.jpeg" alt="channel-3 image"></a>
+            <a href="https://www.youtube.com/c/OFFICIALTHENXSTUDIOS">
+              <div class="profile-container">
+                <img class="profile-picture" src="channel-img/channel-9.jpeg" alt="channel-9 image">
+                <div class="profile-tooltip">
+                  <div class="tooltip-img-container"><img class="tooltip-img" src="channel-img/channel-9.jpeg" alt="tooltip-channel-picture"></div>
+                  <div class="tooltip-txt-container">
+                    <h3>ThenX</h3>
+                    <p>7.64M Subscribers</p>
+                  </div>
+                </div>
+              </div>
+            </a>
           </div>
 
           <div class="video-info">
             <p class="video-title">
-              <a href="https://www.youtube.com/watch?v=9iMGFqMmUFs">The SECRET to Super Human STRENGTH</a>
+              <a href="https://www.youtube.com/watch?v=ixmxOlcrlUc">The SECRET to Super Human STRENGTH</a>
             </p>
       
             <p class="video-author">
-              <a href="https://www.youtube.com/teded" class="channel-link">ThenX</a>
+              <a href="https://www.youtube.com/c/OFFICIALTHENXSTUDIOS" class="channel-link">ThenX</a>
             </p>
       
             <p class="video-stats">
