--- a/youtube.html
+++ b/youtube.html
@@ -485,23 +485,34 @@
       <div class="video-preview">
 
         <div class="thumbnail-row">
-          <a href="https://www.youtube.com/watch?v=9iMGFqMmUFs"><img class="thumbnail" src="thumbnails/thumbnail-10.webp" alt="video-3 thumbnail"></a>
+          <a href="https://www.youtube.com/watch?v=R2vXbFp5C9o"><img class="thumbnail" src="thumbnails/thumbnail-10.webp" alt="video-3 thumbnail"></a>
           <div class="video-time">7:53</div>
         </div>
 
         <div class="video-info-grid">
 
           <div class="channel-picture">
-            <a href="https://www.youtube.com/teded"><img class="profile-picture" src="channel-img/channel-10.jpeg" alt="channel-3 image"></a>
+            <a href="https://www.youtube.com/user/businessinsider">
+              <div class="profile-container">
+                <img class="profile-picture" src="channel-img/channel-10.jpeg" alt="channel-10 image">
+                <div class="profile-tooltip">
+                  <div class="tooltip-img-container"><img class="tooltip-img" src="channel-img/channel-10.jpeg" alt="tooltip-channel-picture"></div>
+                  <div class="tooltip-txt-container">
+                    <h3>Business Insider</h3>
+                    <p>7.78M Subscribers</p>
+                  </div>
+                </div>
+              </div>
+            </a>
           </div>
 
           <div class="video-info">
             <p class="video-title">
-              <a href="https://www.youtube.com/watch?v=9iMGFqMmUFs">How The World's Largest Cruise Ship Makes 30,000 Meals Every Day</a>
+              <a href="https://www.youtube.com/watch?v=R2vXbFp5C9o">How The World's Largest Cruise Ship Makes 30,000 Meals Every Day</a>
             </p>
       
             <p class="video-author">
-              <a href="https://www.youtube.com/teded" class="channel-link">Business Insider</a>
+              <a href="https://www.youtube.com/user/businessinsider" class="channel-link">Business Insider</a>
             </p>
       
             <p class="video-stats">
