--- a/youtube.html
+++ b/youtube.html
@@ -528,23 +528,34 @@
       <div class="video-preview">
 
         <div class="thumbnail-row">
-          <a href="https://www.youtube.com/watch?v=9iMGFqMmUFs"><img class="thumbnail" src="thumbnails/thumbnail-11.webp" alt="video-3 thumbnail"></a>
+          <a href="https://www.youtube.com/watch?v=0nZuYyXET3s"><img class="thumbnail" src="thumbnails/thumbnail-11.webp" alt="video-3 thumbnail"></a>
           <div class="video-time">4:10</div>
         </div>
 
         <div class="video-info-grid">
 
           <div class="channel-picture">
-            <a href="https://www.youtube.com/teded"><img class="profile-picture" src="channel-img/channel-11.jpeg" alt="channel-3 image"></a>
+            <a href="https://www.youtube.com/c/Destinationtips">
+              <div class="profile-container">
+                <img class="profile-picture" src="channel-img/channel-11.jpeg" alt="channel-11 image">
+                <div class="profile-tooltip">
+                  <div class="tooltip-img-container"><img class="tooltip-img" src="channel-img/channel-11.jpeg" alt="tooltip-channel-picture"></div>
+                  <div class="tooltip-txt-container">
+                    <h3>Destination Tips</h3>
+                    <p>282K Subscribers</p>
+                  </div>
+                </div>
+              </div>
+            </a>
           </div>
 
           <div class="video-info">
             <p class="video-title">
-              <a href="https://www.youtube.com/watch?v=9iMGFqMmUFs">Dubai's Crazy Underwater Train and Other Things #Only in Dubai</a>
+              <a href="https://www.youtube.com/watch?v=0nZuYyXET3s">Dubai's Crazy Underwater Train and Other Things #Only in Dubai</a>
             </p>
       
             <p class="video-author">
-              <a href="https://www.youtube.com/teded" class="channel-link">Destination Tips</a>
+              <a href="https://www.youtube.com/c/Destinationtips" class="channel-link">Destination Tips</a>
             </p>
       
             <p class="video-stats">
