--- a/youtube.html
+++ b/youtube.html
@@ -578,7 +578,18 @@
         <div class="video-info-grid">
 
           <div class="channel-picture">
-            <a href="https://www.youtube.com/teded"><img class="profile-picture" src="channel-img/channel-12.jpeg" alt="channel-3 image"></a>
+            <a href="https://www.youtube.com/teded">
+              <div class="profile-container">
+                <img class="profile-picture" src="channel-img/channel-12.jpeg" alt="channel-12 image">
+                <div class="profile-tooltip">
+                  <div class="tooltip-img-container"><img class="tooltip-img" src="channel-img/channel-12.jpeg" alt="tooltip-channel-picture"></div>
+                  <div class="tooltip-txt-container">
+                    <h3>TED-Ed</h3>
+                    <p>18.6M Subscribers</p>
+                  </div>
+                </div>
+              </div>
+            </a>
           </div>
 
           <div class="video-info">
