add meaningful semantic elements to the html

--- a/youtube.html
+++ b/youtube.html
@@ -20,7 +20,7 @@
 
   <body>
     <!-- Header / Navbar -->
-    <div class="header">
+    <header class="header">
 
       <div class="left-section">
         <img class="hamburger-menu" src="icons/hamburger-menu.svg" alt="hamburger-menu">
@@ -60,9 +60,9 @@
         <img class="current-user-picture" src="channel-img/my-channel.jpeg" alt="current-user-picture">
       </div>
       
-    </div>
+    </header>
     <!-- Sidebar -->
-    <div class="sidebar">
+    <nav class="sidebar">
       <!-- sidebar link 1 -->
       <div class="sidebar-link">
         <img src="icons/home.svg" alt="home icon">
@@ -94,10 +94,11 @@
         <div>Library</div>        
       </div>
       <!-- sidebar closing tag -->
-    </div>
+    </nav>
 
     <!-- Main Grid container containing all the video previews -->
-    <div class="video-grid">
+    <main>
+      <div class="video-grid">
         <!-- Video Preview -1 -->
       <div class="video-preview">
 
@@ -616,6 +617,7 @@
       </div>
 
     </div>
+    </main>
     
   </body>
 </html>
